git@github.com:RamazanUlasAvci/CVprototype.git

--- a/page.html
+++ b/page.html
@@ -11,7 +11,7 @@
   <div class="wrap">
     <header>
       <div class="avatar" aria-hidden="true">
-        <img src="Screenshot from 2025-08-20 10-18-32.png" alt="Photo">
+        <img src="images/screenshot-ss.png" alt="Photo">
       </div>
     
       <div class="id">
@@ -22,15 +22,15 @@
 
       <div class="top-right">
         <a href="https://github.com/RamazanUlasAvci" target="_blank" rel="noopener noreferrer">
-        <img src="github-mark.png" alt="github image">
+        <img src="images/github-mark.png" alt="github image">
         </a>
         <a href="https://www.linkedin.com/in/ramazan-ula%C5%9F-avc%C4%B1-75a360369/" target="_blank" rel="noopener noreferrer">
-        <img src="pngimg.com-linkedIn_PNG27.png" alt="linkedin image">
+        <img src="images/pngimg.com-linkedIn_PNG27.png" alt="linkedin image">
         </a>
       </div>
 
       <button id="theme-toggle" class="theme-toggle" aria-pressed="false" title="Toggle dark mode">
-    <span class="sun">☀️</span><span class="moon">🌙</span>
+    <span class="sun">☀️</span><span class="moon">🌙</span> <!--dark mode switch-->
     </button>
 
     </header>
@@ -67,7 +67,7 @@
 
       <!--Middle panel-->
       <aside class="middle">
-        <img class="pin" src="./pngimg.com-pin_PNG76.png" alt="pin">
+        <img class="pin" src="images/pngimg.com-pin_PNG76.png" alt="pin">
         <div class="middle-header">
           <h2>EXPERIENCE
             <ul>
